# medical-summary-assistant

./: .gitignore  README.md  codex.project.json  development-instructions.md  package.json  pyproject.toml
app/: main.js
app/renderer/: App.jsx  index.html
app/renderer/components/: ChatInterface.jsx  SummarySidebar.jsx  TemplateEditor.jsx
backend/: app.py  graph_flow.py  ner_service.py  summarizer.py  template_service.py
config/: runtime.json
docs/: agents.md  build-instructions.md  step-by-step-setup.md
templates/: discharge_summary.yaml
